--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ZiMAD Test Case</string>
+    <string name="message_network_error">Network error!</string>
+    <string name="bttn_close">Close</string>
 </resources>
